--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "egg-bin": "^4.3.5",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
+    "egg-mongoose": "^3.1.0",
     "eslint": "^4.11.0",
     "eslint-config-egg": "^6.0.0",
+    "mongoose": "^5.3.2",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
