--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,15 @@
 {
-  "extends": "eslint-config-egg"
+  "extends": "eslint-config-egg",
+  "rules": {
+    "linebreak-style": [0],
+    "strict": [0],
+    "semi": ["error","never"],
+    "indent": ["error", 4],
+    "semi-spacing": [0, {
+        "before": false,
+        "after": false
+    }],
+    "quotes": ["error", "double"],
+    "quote-props": ["error", "always"]
+  }
 }
