--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
         "before": false,
         "after": false
     }],
-    "quotes": ["error", "double"],
+    "quotes": [0],
     "quote-props": ["error", "always"],
     "no-debugger": [0]
   }
