--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "autod": "autod",
+    "restart": "npm start && npm stop"
   },
   "ci": {
     "version": "8"
