--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
     "autod": "autod",
-    "restart": "npm start && npm stop"
+    "restart": "npm stop && npm start"
   },
   "ci": {
     "version": "8"
