更新登录接口

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,11 @@
 {
     "extends": "eslint-config-egg",
+    "env": {
+        "es6": true
+    },
+    "parserOptions": {
+        "ecmaVersion": 5
+    },
     "rules": {
         "linebreak-style": [
             0
