--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
     "egg-mongoose": "^3.1.0",
+    "egg-redis": "^2.0.0",
+    "egg-socket.io": "^4.1.5",
     "eslint": "^4.11.0",
     "eslint-config-egg": "^6.0.0",
     "mongoose": "^5.3.2",
