--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint": "^4.11.0",
     "eslint-config-egg": "^6.0.0",
     "mongoose": "^5.3.2",
-    "webstorm-disable-index": "^1.2.0"
+    "webstorm-disable-index": "^1.2.0",
+    "ws": "^6.1.0"
   },
   "engines": {
     "node": ">=8.9.0"
